Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87003

error: ‘QVariant QtWaylandClient::QWaylandMimeData::retrieveData_sys(const QString&, QVariant::Type) const’

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 6.1.0 RC
    • 6.0.0 Alpha
    • QPA: Wayland
    • None
    • 1f26b49f6f398b34e39fda9fee4e55928079a442 (qt/qtwayland/dev)

      /WaylandClient_autogen/mocs_compilation.cpp
      agent:2020/09/28 05:20:38 build.go:379: In file included from include/QtWaylandClient/6.0.0/QtWaylandClient/private/qwaylanddataoffer_p.h:1:0,
      agent:2020/09/28 05:20:38 build.go:379:                  from src/client/WaylandClient_autogen/EWIEGA46WW/../../qwaylandprimaryselectionv1_p.h:57,
      agent:2020/09/28 05:20:38 build.go:379:                  from src/client/WaylandClient_autogen/EWIEGA46WW/moc_qwaylandprimaryselectionv1_p.cpp:10,
      agent:2020/09/28 05:20:38 build.go:379:                  from src/client/WaylandClient_autogen/mocs_compilation.cpp:13:
      agent:2020/09/28 05:20:38 build.go:379: include/QtWaylandClient/6.0.0/QtWaylandClient/private/../../../../../src/client/qwaylanddataoffer_p.h:109:14: error: ‘QVariant QtWaylandClient::QWaylandMimeData::retrieveData_sys(const QString&, QVariant::Type) const’ marked ‘override’, but does not override
      agent:2020/09/28 05:20:38 build.go:379:      QVariant retrieveData_sys(const QString &mimeType, QVariant::Type type) const override;
      agent:2020/09/28 05:20:38 build.go:379:               ^~~~~~~~~~~~~~~~
      

      Build log: https://testresults.qt.io/logs/qt/qtwayland/8f55fbcbe1692fff204fab6551cfe79a830dec3b/LinuxRHEL_7_6x86_64LinuxRHEL_7_6x86_64GCCqtci-linux-RHEL-7.6-x86_64-8ad6a0Sccache/5a8486115b22d2d7906b7281501b8a8d00951d1b/build_1601270454/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtwayland/tasks/1601270089

      Tested changes (refs/builds/qtci/dev/1601270087):
      https://codereview.qt-project.org/c/qt/qtwayland/+/312733/4 Update dependencies on 'dev' in qt/qtwayland

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes