Fix compilation after mime data API changes

Follows 848927b688d4709d0b71590518e2c32fe7866147 in qtbase,
where the signature of retrieveData_sys() was changed.

Fixes: QTBUG-87003
Change-Id: I8b88c8f9547e599328f40345a9fbf57c07ec31a4
Reviewed-by: Lars Knoll <lars.knoll@qt.io>